--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1,12 +1,13 @@
-/* Overall body styling\\ */
+/* Overall body styling */
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
-    background-color: #f4f4f4;
+    background-color: #F6F6F6;
 }
 
 h1 {
     text-align: center;
+    color: #AAAAAA;
 }
 
 /*---------------------------------------------------------------------*/
@@ -18,7 +19,7 @@ input[type="text"] {
     font-size: 16px;
     margin-bottom: 10px;
     padding: 5px;
-    border: 2px solid #ccc;
+    border: 2px solid #FFC7C7;
     border-radius: 5px;
 }
 
@@ -28,28 +29,28 @@ input[type="text"] {
 table {
     width: 100%;
     border-collapse: collapse;
-    background-color: #fff;
+    background-color: #FFFFFF;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 /* Table header styling */
 th {
-    background-color: #007bff;
-    color: white;
+    background-color: #FFC7C7;
+    color: black;
     text-align: left;
     padding: 12px 15px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #FFE2E2;
 }
 
 /* Table body row and cell styling */
 td {
     padding: 12px 15px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #F6F6F6;
 }
 
 /* Hover effect for rows */
 tr:hover {
-    background-color: #f5f5f5;
+    background-color: #FFE2E2;
 }
 
 /* Styling the header to emphasize */
@@ -57,7 +58,29 @@ b {
     display: block;
     margin-bottom: 20px;
     font-size: 18px;
-    color: #333;
+    color: #AAAAAA;
+}
+
+/* Styling the header for sorting*/
+.sort-arrow {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+}
+
+.sort-arrow::before {
+    content: '';
+    display: inline-block;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+}
+
+.sort-arrow.asc::before {
+    border-bottom: 5px solid #AAAAAA; /* Arrow pointing up */
+}
+
+.sort-arrow.desc::before {
+    border-top: 5px solid #AAAAAA; /* Arrow pointing down */
 }
 
 /*---------------------------------------------------------------------*/
@@ -71,8 +94,8 @@ b {
 
 /* Styling for each navigation button */
 .nav button {
-    background-color: #4CAF50; 
-    color: white; 
+    background-color: #FFC7C7; 
+    color: black; 
     padding: 10px 20px; 
     margin: 0 5px; 
     border: none; 
@@ -83,7 +106,7 @@ b {
 
 /* Hover effects */
 .nav button:hover {
-    background-color: #45a049;
+    background-color: #FFE2E2;
     transform: scale(1.05); 
 }
 
