--- a/frontend/main.css
+++ b/frontend/main.css
@@ -115,3 +115,13 @@ b {
     outline: none; 
     box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.75);
 }
+
+a {
+    color: blue; 
+    text-decoration: none; 
+}
+
+a:hover {
+    text-decoration: underline; 
+    color: darkblue; 
+}
