--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -63,6 +63,17 @@ html {
     border-radius: 10px;
 }
 
+/* Styling for the gallery captions */
+.gallery .image-container {
+    text-align: center;
+}
+
+.gallery .image-container p {
+    font-size: 18px;
+    color: #555;
+    margin-top: 10px;
+}
+
 /*---------------------------------------------------------------------*/
 
 /* Nav styling */
